add product search by only name
